--- a/asana-blocker-frontend/src/app/goals-automatic/goals-automatic.component.html
+++ b/asana-blocker-frontend/src/app/goals-automatic/goals-automatic.component.html
@@ -1,39 +1,86 @@
-<div class="goals-automatic-wrapper">
-    <div class="blockquote">
-        The 'Automatic' trigger option will reward users for spending time on good websites.
-    </div>
+<div class="goals-automatic-wrapper button-container">
+  <div>
+    <button
+      mat-raised-button
+      class="LoginBtn login-btn-style"
+      color="primary"
+      type="submit"
+    >
+      Add
+    </button>
+  </div>
+  <div>
+    <button
+      mat-raised-button
+      class="LoginBtn login-btn-style"
+      color="primary"
+      type="submit"
+    >
+      Reset
+    </button>
+  </div>
 </div>
 <mat-divider></mat-divider>
+
+<div class="add-website">
+  <mat-form-field class="website-input">
+    <mat-label>Add Time</mat-label>
+    <input #websiteInput matInput placeholder="Add Time" />
+  </mat-form-field>
+</div>
+
+<mat-divider></mat-divider>
+
 <div class="action-difficulty-level">
-    <h4>Choose action difficulty level</h4>
+  <!-- <h4>Choose action difficulty level</h4>
     <div>
         <mat-radio-group aria-label="Select an option" [value]="actionLevelControl.value" [formControl]="actionLevelControl" (change)="handleActionLevelChange()">
             <mat-radio-button value="easy">Easy</mat-radio-button>
             <mat-radio-button value="medium">Medium</mat-radio-button>
             <mat-radio-button value="hard">Hard</mat-radio-button>
         </mat-radio-group>
-    </div>
+    </div> -->
+
+  <div class="difficulty-container">
+      <label for="difficulty">Difficulty:</label>
+      <select name="difficulty" id="difficulty">
+        <option value="easy">easy</option>
+        <option value="medium">medium</option>
+        <option value="hard">hard</option>
+      </select>
+  </div>
 </div>
 <mat-divider></mat-divider>
 
-<div class="add-time">
+<!-- <div class="add-time">
   <label>Add Time</label>
   <input value="00:00:00" type="time" step="1" [formControl]="spendingTime" class="input_spendTime" (change)="time($event)">
-</div>
+</div> -->
 
 <div class="add-website">
-    <mat-form-field class="website-input">
-        <mat-label>Add a website</mat-label>
-        <input #websiteInput matInput placeholder="Ex. Google.com" [formControl]="input" (keyup.enter)="add(input.value || '')">
-    </mat-form-field>
+  <mat-form-field class="website-input">
+    <mat-label>Add a website</mat-label>
+    <input
+      #websiteInput
+      matInput
+      placeholder="Ex. Google.com"
+      [formControl]="input"
+      (keyup.enter)="add(input.value || '')"
+    />
+  </mat-form-field>
 
-    <button class="add-btn" (click)="add(input.value || '')" mat-raised-button color="primary">
-      <mat-icon>add</mat-icon>
-    </button>
+  <button
+    class="add-btn"
+    (click)="add(input.value || '')"
+    mat-raised-button
+    color="primary"
+  >
+    <mat-icon>add</mat-icon>
+  </button>
 </div>
 <div class="websites-list">
-    <!-- <table mat-table [dataSource]="dd" class="mat-elevation-z8"> -->
-        <!-- <ng-container matColumnDef="name">
+  <!-- <table mat-table [dataSource]="dd" class="mat-elevation-z8"> -->
+  <!-- <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef class="name-row"> Name </th>
           <td mat-cell *matCellDef="let element" [class.wild-site]="element.name === '*'"> {{element.name}} </td>
         </ng-container>
@@ -50,24 +97,20 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" [class.wild-site]="row.name === '*'"></tr>
       </table> -->
-     <!-- <div *ngFor ="let sites of _getGoalSiteList">{{sites.site}}</div> -->
+  <!-- <div *ngFor ="let sites of _getGoalSiteList">{{sites.site}}</div> -->
 
-
-     <table>
-      <tr>
-        <th>Name</th>
-        <th>Actions</th>
-      </tr>
-      <tr *ngFor ="let sites of _getGoalSiteList">
-        <td>{{sites.site}}</td>
-         <td> 
-          <button mat-button color="warn" (click)="deleteSite(sites._id)">
-          <mat-icon class="delete-btn">
-          delete
-        </mat-icon>
-      </button>
+  <table>
+    <tr>
+      <th>Name</th>
+      <th>Actions</th>
+    </tr>
+    <tr *ngFor="let sites of _getGoalSiteList">
+      <td>{{ sites.site }}</td>
+      <td>
+        <button mat-button color="warn" (click)="deleteSite(sites._id)">
+          <mat-icon class="delete-btn"> delete </mat-icon>
+        </button>
       </td>
-      </tr>
-    </table>
-    
+    </tr>
+  </table>
 </div>
